k8s/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: health-aggregator
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: health-aggregator
  template:
    metadata:
      labels:
        app: health-aggregator
    spec:
      serviceAccountName: health-aggregator-sa
      containers:
        - name: app
          image: 151580225166.dkr.ecr.eu-west-1.amazonaws.com/aws-cicd-eks-ecr-alb:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:  
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              /path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "300m"
