k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-aggregator-svc
  namespace: dev
spec:
  selector:
    app: health-aggregator
  ports:
    - port:8080
      targetPort:8080
  type: ClusterIP
